[tool.poetry]
name = "twintng"
version = "0.1.0"
description = "An advanced Twitter scraping & OSINT tool."
authors = ["eh-93", "o7n", "pielco11"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/twintproject/twintng-ng"
keywords = ["twintng-ng", "twintng"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
marshmallow = "^3.3.0"
desert = "^2020.1.6"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
mypy = "^0.761"
pytype = {version = "^2020.1.8", python = "3.7"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
codecov = "^2.1.4"

[tool.poetry.scripts]
twintng = "twintng.app:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["twintng"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
